--- a/django/user_info/templates/search.html
+++ b/django/user_info/templates/search.html
@@ -3,11 +3,13 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Asha Software | Search</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="author" content="colorlib.com">
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet" />
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
     <link rel="stylesheet" href="{% static 'css/api-integration.css' %}">
+    <link rel="stylesheet" href="{% static 'css/hamburger-menu.css' %}">
   </head>
   <body>
     <div class="s006">
@@ -18,8 +20,21 @@
           </div>
         </a>
       </div>
-      <a href="{% url 'logout' %}" class="btn-logout">Logout</a>
-      <a href="{% url 'tool_list' %}" class="btn-logout" style="right: 150px;">My Tools</a>
+      <!-- Hamburger Menu -->
+      <div class="hamburger-menu">
+        <div class="hamburger-icon">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+      </div>
+      <div class="menu-items">
+        <a href="{% url 'tool_list' %}">Tools</a>
+        <a href="{% url 'apikey_list' %}">API Keys</a>
+        <a href="{% url 'logout' %}">Logout</a>
+        <button class="menu-close-btn">Close</button>
+      </div>
+      <div class="menu-overlay"></div>
       <div class="search-container">
         <form action="{% url 'search' %}" method="POST">
           {% csrf_token %}
@@ -70,7 +85,8 @@
         </div>
       </div>
     </div>
-  <script>
+  <script src="{% static 'js/hamburger-menu.js' %}"></script>
+<script>
   document.getElementById('search').addEventListener('focus', function() {
     this.value = '';
   });
