--- a/django/user_info/templates/user_info/tool_form.html
+++ b/django/user_info/templates/user_info/tool_form.html
@@ -4,11 +4,28 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>{{ title }}</title>
+    <title>Asha Software | {{ title }}</title>
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet" />
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
+    <link rel="stylesheet" href="{% static 'css/hamburger-menu.css' %}">
     <style>
+        .nav-links {
+            display: flex;
+            margin-bottom: 20px;
+        }
+        .nav-link {
+            color: white;
+            text-decoration: none;
+            margin-right: 20px;
+        }
+        .nav-link span {
+            border-bottom: 2px solid transparent;
+            padding-bottom: 5px;
+        }
+        .nav-link.active span {
+            border-bottom: 2px solid white;
+        }
         .form-section {
             margin-bottom: 30px;
             padding: 20px;
@@ -42,6 +59,7 @@
             max-width: 1000px;
             z-index: 1;
             position: relative;
+            padding-top: 140px;
         }
         .form-control {
             background-color: rgba(30, 30, 30, 0.9) !important;
@@ -92,16 +110,33 @@
                 </div>
             </a>
         </div>
-        <a href="{% url 'logout' %}" class="btn-logout">Logout</a>
-        <a href="{% url 'tool_list' %}" class="btn-logout" style="right: 150px;">Back to Tools</a>
+        <!-- Hamburger Menu -->
+        <div class="hamburger-menu">
+            <div class="hamburger-icon">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+        </div>
+        <div class="menu-items">
+            <a href="{% url 'tool_list' %}">Back to Tools</a>
+            <a href="{% url 'search' %}">Search</a>
+            <a href="{% url 'apikey_list' %}">API Keys</a>
+            <a href="{% url 'logout' %}">Logout</a>
+            <button class="menu-close-btn">Close</button>
+        </div>
+        <div class="menu-overlay"></div>
         
         <div class="form-container">
-            <div style="margin-bottom: 20px;">
-                <a href="{% url 'search' %}" style="color: white; text-decoration: none; margin-right: 20px;">
-                    <span style="border-bottom: 2px solid transparent; padding-bottom: 5px;">Search</span>
+            <div class="nav-links">
+                <a href="{% url 'search' %}" class="nav-link">
+                    <span>Search</span>
                 </a>
-                <a href="{% url 'tool_list' %}" style="color: white; text-decoration: none;">
-                    <span style="border-bottom: 2px solid white; padding-bottom: 5px;">My Tools</span>
+                <a href="{% url 'tool_list' %}" class="nav-link active">
+                    <span>My Tools</span>
+                </a>
+                <a href="{% url 'apikey_list' %}" class="nav-link">
+                    <span>My API Keys</span>
                 </a>
             </div>
 
@@ -260,6 +295,7 @@
 
     <script src="{% static 'js/jquery.min.js' %}"></script>
     <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
+    <script src="{% static 'js/hamburger-menu.js' %}"></script>
     <script>
         // Add Bootstrap form classes
         $(document).ready(function() {
